alteracao de texto, grande classico

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                     </header>
                     <h3>Grande clássico na noite de hoje</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                        Na primeira etapa, os australianos abriram o placar com Craig Goodwin logo aos 9 minutos e assustou os franceses. O drama da França parecia piorar aos 13 minutos, quando Lucas Hernández saiu lesionado. Les Bleus já perderam sete atletas por lesão para essa Copa do Mundo, entre eles o eleito melhor jogador do mundo, o atacante Karim Benzema.
+
+Porém, Adrien Rabiot começou a mandar a “zica de campeão” embora. Primeiro o meio campista empatou a partida com uma cabeçada após cruzamento de Theo Hernandez, depois, o meio campista deixou Olivier Giroud na cara do goleiro para ele só tirar e dar a virada aos azuis.
                     </p>
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
